--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "expect": "^23.4.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "redux-immutable-state-invariant": "^2.1.0",
     "style-loader": "^0.21.0",
     "webpack": "^4.16.2",
     "webpack-cli": "^3.1.0",
